# lightLLM

./: Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  push_to_github.sh  start.md  start_all.sh
.github/workflows/: docker-publish.yml
docs/: DOCKER.md
web/: .gitignore  ARCHITECTURE.md  ONE_CLICK.md  README.md  backend.py  mcp.json  pyproject.toml  requirements.txt  start.ps1  start.sh  stop.sh  tools.py
web/data/: model_list.json
web/ez_agent/: __init__.py  prefabs.py
web/mcp_servers/: google-search.sh
web/static/: blocked.html  custom_select.js  history.js  index.html  render.js  script.js  settings.js  style.css
web/static/themes/: atom-one-dark.min.css
